--- a/jobs/web/templates/bpm.yml.erb
+++ b/jobs/web/templates/bpm.yml.erb
@@ -303,10 +303,6 @@ processes:
     CONCOURSE_CONJUR_AUTHN_TOKEN_FILE: <%= env_flag(v).to_json %>
 <% end -%>
 
-<% if_p("conjur.cert_file") do |v| -%>
-    CONCOURSE_CONJUR_CERT_FILE: <%= env_flag(v).to_json %>
-<% end -%>
-
 <% if_p("conjur.pipeline_secret_template") do |v| -%>
     CONCOURSE_CONJUR_PIPELINE_SECRET_TEMPLATE: <%= env_flag(v).to_json %>
 <% end -%>
@@ -315,12 +311,12 @@ processes:
     CONCOURSE_CONJUR_SECRET_TEMPLATE: <%= env_flag(v).to_json %>
 <% end -%>
 
-<% if_p("conjur.ssl_certificate") do |v| -%>
-    CONCOURSE_CONJUR_SSL_CERTIFICATE: <%= env_flag(v).to_json %>
-<% end -%>
-
 <% if_p("conjur.team_secret_template") do |v| -%>
     CONCOURSE_CONJUR_TEAM_SECRET_TEMPLATE: <%= env_flag(v).to_json %>
+<% end -%>
+
+<% if_p("conjur.tls.ca_cert.certificate") do |v| -%>
+    CONCOURSE_CONJUR_CERT_FILE: <%= env_file_flag(v, "CONCOURSE_CONJUR_CERT_FILE").to_json %>
 <% end -%>
 
 <% if_p("container_placement_strategy") do |v| -%>
