--- a/jobs/worker/templates/env.sh.erb
+++ b/jobs/worker/templates/env.sh.erb
@@ -106,6 +106,10 @@ export CONCOURSE_EPHEMERAL=<%= esc(env_flag(v)) %>
 export CONCOURSE_EXTERNAL_GARDEN_URL=<%= esc(env_flag(v)) %>
 <% end -%>
 
+<% if_p("runtime.type") do |v| -%>
+export CONCOURSE_RUNTIME_TYPE=<%= esc(env_flag(v)) %>
+<% end -%>
+
 <% if_p("garden.allow_host_access") do |v| -%>
 export CONCOURSE_GARDEN_ALLOW_HOST_ACCESS=<%= esc(env_flag(v)) %>
 <% end -%>
@@ -128,10 +132,6 @@ export CONCOURSE_GARDEN_NETWORK_POOL=<%= esc(env_flag(v)) %>
 
 <% if_p("garden.request_timeout") do |v| -%>
 export CONCOURSE_GARDEN_REQUEST_TIMEOUT=<%= esc(env_flag(v)) %>
-<% end -%>
-
-<% if_p("garden.use_houdini") do |v| -%>
-export CONCOURSE_GARDEN_USE_HOUDINI=<%= esc(env_flag(v)) %>
 <% end -%>
 
 <% if_p("healthcheck.bind_ip") do |v| -%>
