--- a/jobs/worker/templates/env.sh.erb
+++ b/jobs/worker/templates/env.sh.erb
@@ -82,12 +82,40 @@ export CONCOURSE_CERTS_DIR=<%= esc(env_flag(v)) %>
 export CONCOURSE_CONNECTION_DRAIN_TIMEOUT=<%= esc(env_flag(v)) %>
 <% end -%>
 
-<% if_p("container_network_pool") do |v| -%>
-export CONCOURSE_CONTAINER_NETWORK_POOL=<%= esc(env_flag(v)) %>
-<% end -%>
-
 <% if_p("container_sweeper_max_in_flight") do |v| -%>
 export CONCOURSE_CONTAINER_SWEEPER_MAX_IN_FLIGHT=<%= esc(env_flag(v)) %>
+<% end -%>
+
+<% if_p("containerd.bin") do |v| -%>
+export CONCOURSE_CONTAINERD_BIN=<%= esc(env_flag(v)) %>
+<% end -%>
+
+<% if_p("containerd.config") do |v| -%>
+export CONCOURSE_CONTAINERD_CONFIG=<%= esc(env_flag(v)) %>
+<% end -%>
+
+<% if_p("containerd.dnsProxyEnable") do |v| -%>
+export CONCOURSE_CONTAINERD_DNS_PROXY_ENABLE=<%= esc(env_flag(v)) %>
+<% end -%>
+
+<% if_p("containerd.dnsServers") do |v| -%>
+export CONCOURSE_CONTAINERD_DNS_SERVER=<%= esc(env_flag(v)) %>
+<% end -%>
+
+<% if_p("containerd.maxContainers") do |v| -%>
+export CONCOURSE_CONTAINERD_MAX_CONTAINERS=<%= esc(env_flag(v)) %>
+<% end -%>
+
+<% if_p("containerd.networkPool") do |v| -%>
+export CONCOURSE_CONTAINERD_NETWORK_POOL=<%= esc(env_flag(v)) %>
+<% end -%>
+
+<% if_p("containerd.requestTimeout") do |v| -%>
+export CONCOURSE_CONTAINERD_REQUEST_TIMEOUT=<%= esc(env_flag(v)) %>
+<% end -%>
+
+<% if_p("containerd.restrictedNetworks") do |v| -%>
+export CONCOURSE_CONTAINERD_RESTRICTED_NETWORK=<%= esc(env_flag(v)) %>
 <% end -%>
 
 <% if_p("debug.bind_ip") do |v| -%>
@@ -104,10 +132,6 @@ export CONCOURSE_EPHEMERAL=<%= esc(env_flag(v)) %>
 
 <% if_p("external_garden_url") do |v| -%>
 export CONCOURSE_EXTERNAL_GARDEN_URL=<%= esc(env_flag(v)) %>
-<% end -%>
-
-<% if_p("runtime.type") do |v| -%>
-export CONCOURSE_RUNTIME_TYPE=<%= esc(env_flag(v)) %>
 <% end -%>
 
 <% if_p("garden.allow_host_access") do |v| -%>
@@ -160,6 +184,10 @@ export CONCOURSE_LOG_LEVEL=<%= esc(env_flag(v)) %>
 
 <% if_p("no_proxy") do |v| -%>
 export no_proxy=<%= esc(env_flag(v)) %>
+<% end -%>
+
+<% if_p("runtime.type") do |v| -%>
+export CONCOURSE_RUNTIME_TYPE=<%= esc(env_flag(v)) %>
 <% end -%>
 
 <% if_p("sweep_interval") do |v| -%>
