--- a/jobs/worker/templates/env.sh.erb
+++ b/jobs/worker/templates/env.sh.erb
@@ -94,27 +94,27 @@ export CONCOURSE_CONTAINERD_BIN=<%= esc(env_flag(v)) %>
 export CONCOURSE_CONTAINERD_CONFIG=<%= esc(env_flag(v)) %>
 <% end -%>
 
-<% if_p("containerd.dnsProxyEnable") do |v| -%>
+<% if_p("containerd.dns_proxy_enable") do |v| -%>
 export CONCOURSE_CONTAINERD_DNS_PROXY_ENABLE=<%= esc(env_flag(v)) %>
 <% end -%>
 
-<% if_p("containerd.dnsServers") do |v| -%>
+<% if_p("containerd.dns_servers") do |v| -%>
 export CONCOURSE_CONTAINERD_DNS_SERVER=<%= esc(env_flag(v)) %>
 <% end -%>
 
-<% if_p("containerd.maxContainers") do |v| -%>
+<% if_p("containerd.max_containers") do |v| -%>
 export CONCOURSE_CONTAINERD_MAX_CONTAINERS=<%= esc(env_flag(v)) %>
 <% end -%>
 
-<% if_p("containerd.networkPool") do |v| -%>
+<% if_p("containerd.network_pool") do |v| -%>
 export CONCOURSE_CONTAINERD_NETWORK_POOL=<%= esc(env_flag(v)) %>
 <% end -%>
 
-<% if_p("containerd.requestTimeout") do |v| -%>
+<% if_p("containerd.request_timeout") do |v| -%>
 export CONCOURSE_CONTAINERD_REQUEST_TIMEOUT=<%= esc(env_flag(v)) %>
 <% end -%>
 
-<% if_p("containerd.restrictedNetworks") do |v| -%>
+<% if_p("containerd.restricted_networks") do |v| -%>
 export CONCOURSE_CONTAINERD_RESTRICTED_NETWORK=<%= esc(env_flag(v)) %>
 <% end -%>
 
