simplifying runtime.type to runtime and using CONCOURSE_RUNTIME
CONCOURSE_RUNTIME_TYPE has been switched to CONCOURSE_RUNTIME in
concourse/concourse. Updating bosh-release to be compatible.

Signed-off-by: Muntasir Chowdhury <mchowdhury@pivotal.io>

--- a/jobs/worker/templates/env.sh.erb
+++ b/jobs/worker/templates/env.sh.erb
@@ -186,8 +186,8 @@ export CONCOURSE_LOG_LEVEL=<%= esc(env_flag(v)) %>
 export no_proxy=<%= esc(env_flag(v)) %>
 <% end -%>
 
-<% if_p("runtime.type") do |v| -%>
-export CONCOURSE_RUNTIME_TYPE=<%= esc(env_flag(v)) %>
+<% if_p("runtime") do |v| -%>
+export CONCOURSE_RUNTIME=<%= esc(env_flag(v)) %>
 <% end -%>
 
 <% if_p("sweep_interval") do |v| -%>
