Add a runtime flag to spec files
Only one of CONCOURSE_CONTAINERD_* and CONCOURSE_GARDEN_* sets of
options should be set. Add a flag in the spec file that the envgen
helper uses to generate ERB files that correctly represent this need.
Defaults to Guardian since that is the implicit default in Concourse.

Fixes #115

Signed-off-by: Andy Paine <andy.paine@engineerbetter.com>

--- a/jobs/worker/templates/env.sh.erb.tmpl
+++ b/jobs/worker/templates/env.sh.erb.tmpl
@@ -6,6 +6,7 @@
   end
 
   name_prefix = spec.id.split("-")[0]
+  runtime_options = p("runtime", "guardian")
 -%>
 export CONCOURSE_NAME="<%= name_prefix %>-$(hostname | cut -d '-' -f 2-)"
 
@@ -32,7 +33,7 @@ export CONCOURSE_GARDEN_CONFIG=/var/vcap/jobs/worker/config/garden.ini
 
 {{template "env_helpers.erb.tmpl" .}}
 
-{{- range $prop := .EnvProperties -}}
+{{- range $prop := .EnvProperties.ForRuntime "" -}}
 {{- if $prop.Env -}}
 <% if_p("{{$prop.Name}}") do |v| -%>
 export {{$prop.Env}}=<%= esc(env_flag(v)) %>
@@ -47,3 +48,23 @@ export {{$prop.EnvFile}}=<%= esc(env_file_flag(v, "{{$prop.EnvFile}}")) %>
 
 {{ end -}}
 {{- end -}}
+
+<% if runtime_options == "guardian" %>
+{{- range $prop := .EnvProperties.ForRuntime "guardian" }}
+{{- if $prop.Env }}
+  <% if_p("{{$prop.Name}}") do |v| -%>
+  export {{$prop.Env}}=<%= esc(env_flag(v)) %>
+  <% end -%>
+{{ end -}}
+{{- end -}}
+<% end %>
+
+<% if runtime_options == "containerd" %>
+{{- range $prop := .EnvProperties.ForRuntime "containerd" }}
+{{- if $prop.Env }}
+  <% if_p("{{$prop.Name}}") do |v| -%>
+  export {{$prop.Env}}=<%= esc(env_flag(v)) %>
+  <% end -%>
+{{ end -}}
+{{- end -}}
+<% end %>
