--- a/jobs/worker/templates/env.sh.erb
+++ b/jobs/worker/templates/env.sh.erb
@@ -6,6 +6,7 @@
   end
 
   name_prefix = spec.id.split("-")[0]
+  runtime_options = p("runtime", "guardian")
 -%>
 export CONCOURSE_NAME="<%= name_prefix %>-$(hostname | cut -d '-' -f 2-)"
 
@@ -86,38 +87,6 @@ export CONCOURSE_CONNECTION_DRAIN_TIMEOUT=<%= esc(env_flag(v)) %>
 export CONCOURSE_CONTAINER_SWEEPER_MAX_IN_FLIGHT=<%= esc(env_flag(v)) %>
 <% end -%>
 
-<% if_p("containerd.bin") do |v| -%>
-export CONCOURSE_CONTAINERD_BIN=<%= esc(env_flag(v)) %>
-<% end -%>
-
-<% if_p("containerd.config") do |v| -%>
-export CONCOURSE_CONTAINERD_CONFIG=<%= esc(env_flag(v)) %>
-<% end -%>
-
-<% if_p("containerd.dns_proxy_enable") do |v| -%>
-export CONCOURSE_CONTAINERD_DNS_PROXY_ENABLE=<%= esc(env_flag(v)) %>
-<% end -%>
-
-<% if_p("containerd.dns_servers") do |v| -%>
-export CONCOURSE_CONTAINERD_DNS_SERVER=<%= esc(env_flag(v)) %>
-<% end -%>
-
-<% if_p("containerd.max_containers") do |v| -%>
-export CONCOURSE_CONTAINERD_MAX_CONTAINERS=<%= esc(env_flag(v)) %>
-<% end -%>
-
-<% if_p("containerd.network_pool") do |v| -%>
-export CONCOURSE_CONTAINERD_NETWORK_POOL=<%= esc(env_flag(v)) %>
-<% end -%>
-
-<% if_p("containerd.request_timeout") do |v| -%>
-export CONCOURSE_CONTAINERD_REQUEST_TIMEOUT=<%= esc(env_flag(v)) %>
-<% end -%>
-
-<% if_p("containerd.restricted_networks") do |v| -%>
-export CONCOURSE_CONTAINERD_RESTRICTED_NETWORK=<%= esc(env_flag(v)) %>
-<% end -%>
-
 <% if_p("debug.bind_ip") do |v| -%>
 export CONCOURSE_DEBUG_BIND_IP=<%= esc(env_flag(v)) %>
 <% end -%>
@@ -132,30 +101,6 @@ export CONCOURSE_EPHEMERAL=<%= esc(env_flag(v)) %>
 
 <% if_p("external_garden_url") do |v| -%>
 export CONCOURSE_EXTERNAL_GARDEN_URL=<%= esc(env_flag(v)) %>
-<% end -%>
-
-<% if_p("garden.allow_host_access") do |v| -%>
-export CONCOURSE_GARDEN_ALLOW_HOST_ACCESS=<%= esc(env_flag(v)) %>
-<% end -%>
-
-<% if_p("garden.deny_networks") do |v| -%>
-export CONCOURSE_GARDEN_DENY_NETWORK=<%= esc(env_flag(v)) %>
-<% end -%>
-
-<% if_p("garden.dns_servers") do |v| -%>
-export CONCOURSE_GARDEN_DNS_SERVER=<%= esc(env_flag(v)) %>
-<% end -%>
-
-<% if_p("garden.max_containers") do |v| -%>
-export CONCOURSE_GARDEN_MAX_CONTAINERS=<%= esc(env_flag(v)) %>
-<% end -%>
-
-<% if_p("garden.network_pool") do |v| -%>
-export CONCOURSE_GARDEN_NETWORK_POOL=<%= esc(env_flag(v)) %>
-<% end -%>
-
-<% if_p("garden.request_timeout") do |v| -%>
-export CONCOURSE_GARDEN_REQUEST_TIMEOUT=<%= esc(env_flag(v)) %>
 <% end -%>
 
 <% if_p("healthcheck.bind_ip") do |v| -%>
@@ -222,3 +167,62 @@ export CONCOURSE_REBALANCE_INTERVAL=<%= esc(env_flag(v)) %>
 export CONCOURSE_TSA_WORKER_PRIVATE_KEY=<%= esc(env_file_flag(v, "CONCOURSE_TSA_WORKER_PRIVATE_KEY")) %>
 <% end -%>
 
+<% if runtime_options == "guardian" %>
+  <% if_p("garden.allow_host_access") do |v| -%>
+  export CONCOURSE_GARDEN_ALLOW_HOST_ACCESS=<%= esc(env_flag(v)) %>
+  <% end -%>
+
+  <% if_p("garden.deny_networks") do |v| -%>
+  export CONCOURSE_GARDEN_DENY_NETWORK=<%= esc(env_flag(v)) %>
+  <% end -%>
+
+  <% if_p("garden.dns_servers") do |v| -%>
+  export CONCOURSE_GARDEN_DNS_SERVER=<%= esc(env_flag(v)) %>
+  <% end -%>
+
+  <% if_p("garden.max_containers") do |v| -%>
+  export CONCOURSE_GARDEN_MAX_CONTAINERS=<%= esc(env_flag(v)) %>
+  <% end -%>
+
+  <% if_p("garden.network_pool") do |v| -%>
+  export CONCOURSE_GARDEN_NETWORK_POOL=<%= esc(env_flag(v)) %>
+  <% end -%>
+
+  <% if_p("garden.request_timeout") do |v| -%>
+  export CONCOURSE_GARDEN_REQUEST_TIMEOUT=<%= esc(env_flag(v)) %>
+  <% end -%>
+<% end %>
+
+<% if runtime_options == "containerd" %>
+  <% if_p("containerd.bin") do |v| -%>
+  export CONCOURSE_CONTAINERD_BIN=<%= esc(env_flag(v)) %>
+  <% end -%>
+
+  <% if_p("containerd.config") do |v| -%>
+  export CONCOURSE_CONTAINERD_CONFIG=<%= esc(env_flag(v)) %>
+  <% end -%>
+
+  <% if_p("containerd.dns_proxy_enable") do |v| -%>
+  export CONCOURSE_CONTAINERD_DNS_PROXY_ENABLE=<%= esc(env_flag(v)) %>
+  <% end -%>
+
+  <% if_p("containerd.dns_servers") do |v| -%>
+  export CONCOURSE_CONTAINERD_DNS_SERVER=<%= esc(env_flag(v)) %>
+  <% end -%>
+
+  <% if_p("containerd.max_containers") do |v| -%>
+  export CONCOURSE_CONTAINERD_MAX_CONTAINERS=<%= esc(env_flag(v)) %>
+  <% end -%>
+
+  <% if_p("containerd.network_pool") do |v| -%>
+  export CONCOURSE_CONTAINERD_NETWORK_POOL=<%= esc(env_flag(v)) %>
+  <% end -%>
+
+  <% if_p("containerd.request_timeout") do |v| -%>
+  export CONCOURSE_CONTAINERD_REQUEST_TIMEOUT=<%= esc(env_flag(v)) %>
+  <% end -%>
+
+  <% if_p("containerd.restricted_networks") do |v| -%>
+  export CONCOURSE_CONTAINERD_RESTRICTED_NETWORK=<%= esc(env_flag(v)) %>
+  <% end -%>
+<% end %>
