--- a/jobs/web/templates/pre_start.erb
+++ b/jobs/web/templates/pre_start.erb
@@ -87,6 +87,9 @@ mkdir -p /var/vcap/jobs/web/config/env
 <% if_p("postgresql.client_cert.private_key") do |v| -%>
 <%= env_file_writer(v, "CONCOURSE_POSTGRES_CLIENT_KEY") %>
 <% end -%>
+<% if_p("saml_auth.ca_cert.certificate") do |v| -%>
+<%= env_file_writer(v, "CONCOURSE_SAML_CA_CERT") %>
+<% end -%>
 <% if_p("syslog.ca_cert.certificate") do |v| -%>
 <%= env_file_writer(v, "CONCOURSE_SYSLOG_CA_CERT") %>
 <% end -%>
