--- a/jobs/web/templates/bpm.yml.erb
+++ b/jobs/web/templates/bpm.yml.erb
@@ -819,6 +819,14 @@ processes:
     CONCOURSE_MAIN_TEAM_OIDC_USER: <%= env_flag(v).to_json %>
 <% end -%>
 
+<% if_p("main_team.auth.saml.groups") do |v| -%>
+    CONCOURSE_MAIN_TEAM_SAML_GROUP: <%= env_flag(v).to_json %>
+<% end -%>
+
+<% if_p("main_team.auth.saml.users") do |v| -%>
+    CONCOURSE_MAIN_TEAM_SAML_USER: <%= env_flag(v).to_json %>
+<% end -%>
+
 <% if_p("max_active_tasks_per_worker") do |v| -%>
     CONCOURSE_MAX_ACTIVE_TASKS_PER_WORKER: <%= env_flag(v).to_json %>
 <% end -%>
