--- a/jobs/worker/templates/env.sh.erb
+++ b/jobs/worker/templates/env.sh.erb
@@ -118,6 +118,18 @@ export CONCOURSE_CONTAINERD_REQUEST_TIMEOUT=<%= esc(env_flag(v)) %>
 export CONCOURSE_CONTAINERD_RESTRICTED_NETWORK=<%= esc(env_flag(v)) %>
 <% end -%>
 
+#TODO: When the Concourse binary starts defaulting to containerd in the future the if condition should also check for
+#the case where runtime is nil (i.e. defaults to containerd without being specified)
+<%
+  if_p("runtime") do |v|
+    if v == "containerd"
+-%>
+export CONCOURSE_CONTAINERD_INIT_BIN=<%= p("containerd.init_bin", "/var/vcap/packages/concourse/bin/init") %>
+<%
+    end
+  end
+-%>
+
 <% if_p("debug.bind_ip") do |v| -%>
 export CONCOURSE_DEBUG_BIND_IP=<%= esc(env_flag(v)) %>
 <% end -%>
