--- a/jobs/worker/templates/env.sh.erb
+++ b/jobs/worker/templates/env.sh.erb
@@ -125,6 +125,7 @@ export CONCOURSE_CONTAINERD_RESTRICTED_NETWORK=<%= esc(env_flag(v)) %>
     if v == "containerd"
 -%>
 export CONCOURSE_CONTAINERD_INIT_BIN=<%= p("containerd.init_bin", "/var/vcap/packages/concourse/bin/init") %>
+export CONCOURSE_CONTAINERD_CNI_PLUGINS_DIR=<%= p("containerd.cni_plugins_dir", "/var/vcap/packages/concourse/bin") %>
 <%
     end
   end
