--- a/jobs/web/templates/bpm.yml.erb
+++ b/jobs/web/templates/bpm.yml.erb
@@ -407,6 +407,10 @@ processes:
     CONCOURSE_ENABLE_GLOBAL_RESOURCES: <%= env_flag(v).to_json %>
 <% end -%>
 
+<% if_p("enable_pipeline_instances") do |v| -%>
+    CONCOURSE_ENABLE_PIPELINE_INSTANCES: <%= env_flag(v).to_json %>
+<% end -%>
+
 <% if_p("enable_rerun_when_worker_disappears") do |v| -%>
     CONCOURSE_ENABLE_RERUN_WHEN_WORKER_DISAPPEARS: <%= env_flag(v).to_json %>
 <% end -%>
@@ -697,10 +701,6 @@ processes:
 
 <% if_p("lets_encrypt.enabled") do |v| -%>
     CONCOURSE_ENABLE_LETS_ENCRYPT: <%= env_flag(v).to_json %>
-<% end -%>
-
-<% if_p("lidar_checker_interval") do |v| -%>
-    CONCOURSE_LIDAR_CHECKER_INTERVAL: <%= env_flag(v).to_json %>
 <% end -%>
 
 <% if_p("lidar_scanner_interval") do |v| -%>
