--- a/jobs/worker/templates/env.sh.erb
+++ b/jobs/worker/templates/env.sh.erb
@@ -62,6 +62,21 @@ export CONCOURSE_GARDEN_CONFIG=/var/vcap/jobs/worker/config/garden.ini
     end
   end
 -%>
+
+
+#TODO: When the Concourse binary starts defaulting to containerd in the future the if condition should also check for
+#the case where runtime is nil (i.e. defaults to containerd without being specified)
+<%
+  if_p("runtime") do |v|
+    if v == "containerd"
+-%>
+export CONCOURSE_CONTAINERD_INIT_BIN=<%= p("containerd.init_bin", "/var/vcap/packages/concourse/bin/init") %>
+export CONCOURSE_CONTAINERD_CNI_PLUGINS_DIR=<%= p("containerd.cni_plugins_dir", "/var/vcap/packages/concourse/bin") %>
+<%
+    end
+  end
+-%>
+
 <% if_p("baggageclaim.bind_port") do |v| -%>
 export CONCOURSE_BAGGAGECLAIM_BIND_PORT=<%= esc(env_flag(v)) %>
 <% end -%>
@@ -90,6 +105,10 @@ export CONCOURSE_CONTAINER_SWEEPER_MAX_IN_FLIGHT=<%= esc(env_flag(v)) %>
 export CONCOURSE_CONTAINERD_BIN=<%= esc(env_flag(v)) %>
 <% end -%>
 
+<% if_p("containerd.cni_bin") do |v| -%>
+export CONCOURSE_CONTAINERD_CNI_PLUGINS_DIR=<%= esc(env_flag(v)) %>
+<% end -%>
+
 <% if_p("containerd.config") do |v| -%>
 export CONCOURSE_CONTAINERD_CONFIG=<%= esc(env_flag(v)) %>
 <% end -%>
@@ -100,6 +119,10 @@ export CONCOURSE_CONTAINERD_DNS_PROXY_ENABLE=<%= esc(env_flag(v)) %>
 
 <% if_p("containerd.dns_servers") do |v| -%>
 export CONCOURSE_CONTAINERD_DNS_SERVER=<%= esc(env_flag(v)) %>
+<% end -%>
+
+<% if_p("containerd.init_bin") do |v| -%>
+export CONCOURSE_CONTAINERD_INIT_BIN=<%= esc(env_flag(v)) %>
 <% end -%>
 
 <% if_p("containerd.max_containers") do |v| -%>
@@ -117,19 +140,6 @@ export CONCOURSE_CONTAINERD_REQUEST_TIMEOUT=<%= esc(env_flag(v)) %>
 <% if_p("containerd.restricted_networks") do |v| -%>
 export CONCOURSE_CONTAINERD_RESTRICTED_NETWORK=<%= esc(env_flag(v)) %>
 <% end -%>
-
-#TODO: When the Concourse binary starts defaulting to containerd in the future the if condition should also check for
-#the case where runtime is nil (i.e. defaults to containerd without being specified)
-<%
-  if_p("runtime") do |v|
-    if v == "containerd"
--%>
-export CONCOURSE_CONTAINERD_INIT_BIN=<%= p("containerd.init_bin", "/var/vcap/packages/concourse/bin/init") %>
-export CONCOURSE_CONTAINERD_CNI_PLUGINS_DIR=<%= p("containerd.cni_plugins_dir", "/var/vcap/packages/concourse/bin") %>
-<%
-    end
-  end
--%>
 
 <% if_p("debug.bind_ip") do |v| -%>
 export CONCOURSE_DEBUG_BIND_IP=<%= esc(env_flag(v)) %>
