--- a/jobs/web/templates/bpm.yml.erb
+++ b/jobs/web/templates/bpm.yml.erb
@@ -1091,6 +1091,18 @@ processes:
     CONCOURSE_SESSION_SIGNING_KEY: <%= env_file_flag(v, "CONCOURSE_SESSION_SIGNING_KEY").to_json %>
 <% end -%>
 
+<% if_p("tracing.honeycomb_api_key") do |v| -%>
+    CONCOURSE_TRACING_HONEYCOMB_API_KEY: <%= env_flag(v).to_json %>
+<% end -%>
+
+<% if_p("tracing.honeycomb_dataset") do |v| -%>
+    CONCOURSE_TRACING_HONEYCOMB_DATASET: <%= env_flag(v).to_json %>
+<% end -%>
+
+<% if_p("tracing.honeycomb_service_name") do |v| -%>
+    CONCOURSE_TRACING_HONEYCOMB_SERVICE_NAME: <%= env_flag(v).to_json %>
+<% end -%>
+
 <% if_p("tracing.jaeger_endpoint") do |v| -%>
     CONCOURSE_TRACING_JAEGER_ENDPOINT: <%= env_flag(v).to_json %>
 <% end -%>
