add godebug configs
Signed-off-by: Rui Yang <ruiya@vmware.com>

--- a/jobs/web/templates/bpm.yml.erb
+++ b/jobs/web/templates/bpm.yml.erb
@@ -391,6 +391,10 @@ processes:
     CONCOURSE_DEBUG_BIND_PORT: <%= env_flag(v).to_json %>
 <% end -%>
 
+<% if_p("debug.godebug") do |v| -%>
+    GODEBUG: <%= env_flag(v).to_json %>
+<% end -%>
+
 <% if_p("default_check_interval") do |v| -%>
     CONCOURSE_RESOURCE_CHECKING_INTERVAL: <%= env_flag(v).to_json %>
 <% end -%>
