--- a/jobs/worker/templates/env.sh.erb
+++ b/jobs/worker/templates/env.sh.erb
@@ -89,6 +89,14 @@ export CONCOURSE_BAGGAGECLAIM_DISABLE_USER_NAMESPACES=<%= esc(env_flag(v)) %>
 export CONCOURSE_BAGGAGECLAIM_DRIVER=<%= esc(env_flag(v)) %>
 <% end -%>
 
+<% if_p("baggageclaim.p2p.interface_family") do |v| -%>
+export CONCOURSE_BAGGAGECLAIM_P2P_INTERFACE_FAMILY=<%= esc(env_flag(v)) %>
+<% end -%>
+
+<% if_p("baggageclaim.p2p.interface_name_pattern") do |v| -%>
+export CONCOURSE_BAGGAGECLAIM_P2P_INTERFACE_NAME_PATTERN=<%= esc(env_flag(v)) %>
+<% end -%>
+
 <% if_p("certs_path") do |v| -%>
 export CONCOURSE_CERTS_DIR=<%= esc(env_flag(v)) %>
 <% end -%>
