--- a/jobs/web/templates/bpm.yml.erb
+++ b/jobs/web/templates/bpm.yml.erb
@@ -407,6 +407,10 @@ processes:
     CONCOURSE_DEFAULT_TASK_MEMORY_LIMIT: <%= env_flag(v).to_json %>
 <% end -%>
 
+<% if_p("displayer_user_id_per_connector") do |v| -%>
+    CONCOURSE_DISPLAY_USER_ID_PER_CONNECTOR: <%= env_flag(v).to_json %>
+<% end -%>
+
 <% if_p("emit_metrics_to_logs") do |v| -%>
     CONCOURSE_EMIT_TO_LOGS: <%= env_flag(v).to_json %>
 <% end -%>
