expose baggageclaim bind_ip this would fix #140
Signed-off-by: ramonskie <ramonmakkelie@gmail.com>

--- a/jobs/worker/templates/env.sh.erb
+++ b/jobs/worker/templates/env.sh.erb
@@ -77,6 +77,10 @@ export CONCOURSE_CONTAINERD_CNI_PLUGINS_DIR=<%= p("containerd.cni_plugins_dir", 
   end
 -%>
 
+<% if_p("baggageclaim.bind_ip") do |v| -%>
+export CONCOURSE_BAGGAGECLAIM_BIND_IP=<%= esc(env_flag(v)) %>
+<% end -%>
+
 <% if_p("baggageclaim.bind_port") do |v| -%>
 export CONCOURSE_BAGGAGECLAIM_BIND_PORT=<%= esc(env_flag(v)) %>
 <% end -%>
