add params for MTU + external IP
Signed-off-by: Esteban Foronda <eforonda@vmware.com>
Co-authored-by: Aidan Oldershaw <aoldershaw@pivotal.io>

--- a/jobs/worker/templates/env.sh.erb
+++ b/jobs/worker/templates/env.sh.erb
@@ -133,12 +133,20 @@ export CONCOURSE_CONTAINERD_DNS_PROXY_ENABLE=<%= esc(env_flag(v)) %>
 export CONCOURSE_CONTAINERD_DNS_SERVER=<%= esc(env_flag(v)) %>
 <% end -%>
 
+<% if_p("containerd.external_ip") do |v| -%>
+export CONCOURSE_CONTAINERD_EXTERNAL_IP=<%= esc(env_flag(v)) %>
+<% end -%>
+
 <% if_p("containerd.init_bin") do |v| -%>
 export CONCOURSE_CONTAINERD_INIT_BIN=<%= esc(env_flag(v)) %>
 <% end -%>
 
 <% if_p("containerd.max_containers") do |v| -%>
 export CONCOURSE_CONTAINERD_MAX_CONTAINERS=<%= esc(env_flag(v)) %>
+<% end -%>
+
+<% if_p("containerd.mtu") do |v| -%>
+export CONCOURSE_CONTAINERD_MTU=<%= esc(env_flag(v)) %>
 <% end -%>
 
 <% if_p("containerd.network_pool") do |v| -%>
