Changed the var to check to see if tls is enabled
We changd what sslmode gets set to based on what the bbr-sdk does.
Specifially, we looked at this test here:
https://github.com/cloudfoundry-incubator/backup-and-restore-sdk-release/blob/bc4e06e5f91fcb6fef8326907349c4f299333b8d/src/database-backup-restore/integration_tests/postgres_test.go#L621-L661

Added the bbr-atcdb job to the generate-job-templates script

Signed-off-by: Taylor Silva <tsilva@pivotal.io>
Co-authored-by: Esteban Foronda <eforonda@vmware.com>

--- a/jobs/bbr-atcdb/templates/connection_data.erb
+++ b/jobs/bbr-atcdb/templates/connection_data.erb
@@ -157,32 +157,39 @@ mkdir -p /var/vcap/jobs/bbr-atcdb/config/env
 
     sslmode = "disable"
 
-    unless postgres_tls_skip_host_verify
-      sslmode = "require"
+    if postgres_tls_enabled
+      # verify ca and host cert
+      sslmode = "verify-full"
 
+      if postgres_tls_skip_host_verify
+        # still verify ca but not the host certificate
+        sslmode = "verify-ca"
+      end
+-%>
+<%
       unless postgres_tls_ca.empty?
 -%>
-<%=        env_file_writer(postgres_tls_ca, "POSTGRES_TLS_CA") %>
+<%=     env_file_writer(postgres_tls_ca, "CONCOURSE_TLS_CA") %>
 <%
-        connection_string += " sslrootcert=/var/vcap/jobs/bbr-atcdb/config/env/POSTGRES_TLS_CA"
+        connection_string += " sslrootcert=/var/vcap/jobs/bbr-atcdb/config/env/CONCOURSE_TLS_CA" \
       end
 
       unless postgres_tls_public_cert.empty?
 -%>
-<%=        env_file_writer(postgres_tls_public_cert, "POSTGRES_TLS_CERTIFICATE") %>
+<%=     env_file_writer(postgres_tls_public_cert, "CONCOURSE_TLS_CERTIFICATE") %>
 <%
-        connection_string += " sslcert=/var/vcap/jobs/bbr-atcdb/config/env/POSTGRES_TLS_CERTIFICATE"
+        connection_string += " sslcert=/var/vcap/jobs/bbr-atcdb/config/env/CONCOURSE_TLS_CERTIFICATE" \
       end
 
       unless postgres_tls_private_key.empty?
 -%>
-<%=        env_file_writer(postgres_tls_private_key, "POSTGRES_TLS_PRIVATE_KEY") %>
-<%
-        connection_string += " sslkey=/var/vcap/jobs/bbr-atcdb/config/env/POSTGRES_TLS_PRIVATE_KEY"
+<%=     env_file_writer(postgres_tls_private_key, "CONCOURSE_TLS_PRIVATE_KEY") %>
+<%=
+        connection_string += " sslkey=/var/vcap/jobs/bbr-atcdb/config/env/CONCOURSE_TLS_PRIVATE_KEY"
       end
     end
 
     connection_string += " sslmode="+sslmode
--%>
 
-<%= "PG_CONNECTION_STRING=\""+connection_string+"\"" %>
+    puts "PG_CONNECTION_STRING=\""+connection_string+"\""
+%>
