bbr tmpl out of sync with erb template
bringing it in-sync with the current state of the erb template

Signed-off-by: Taylor Silva <tsilva@pivotal.io>

--- a/jobs/bbr-atcdb/templates/connection_data.erb.tmpl
+++ b/jobs/bbr-atcdb/templates/connection_data.erb.tmpl
@@ -44,12 +44,12 @@ ENV_FILE_OWNER=vcap
       unless postgres_tls_private_key.empty?
 -%>
 <%=     env_file_writer(postgres_tls_private_key, "CONCOURSE_TLS_PRIVATE_KEY") %>
-<%=
+<%
         connection_string += " sslkey=/var/vcap/jobs/bbr-atcdb/config/env/CONCOURSE_TLS_PRIVATE_KEY"
       end
     end
 
     connection_string += " sslmode="+sslmode
+-%>
 
-    puts "PG_CONNECTION_STRING=\""+connection_string+"\""
-%>
+<%= "PG_CONNECTION_STRING=\""+connection_string+"\"" %>
