--- a/jobs/worker/templates/env.sh.erb
+++ b/jobs/worker/templates/env.sh.erb
@@ -161,6 +161,10 @@ export CONCOURSE_CONTAINERD_REQUEST_TIMEOUT=<%= esc(env_flag(v)) %>
 export CONCOURSE_CONTAINERD_RESTRICTED_NETWORK=<%= esc(env_flag(v)) %>
 <% end -%>
 
+<% if_p("containerd.allow_host_access") do |v| -%>
+export CONCOURSE_CONTAINERD_ALLOW_HOST_ACCESS=<%= esc(env_flag(v)) %>
+<% end -%>
+
 <% if_p("debug.bind_ip") do |v| -%>
 export CONCOURSE_DEBUG_BIND_IP=<%= esc(env_flag(v)) %>
 <% end -%>
