add properties for opa soft enforcement
https://github.com/concourse/concourse/pull/7139

Signed-off-by: Bohan Chen <bochen@pivotal.io>

--- a/jobs/web/templates/bpm.yml.erb
+++ b/jobs/web/templates/bpm.yml.erb
@@ -939,6 +939,18 @@ processes:
     CONCOURSE_OLD_ENCRYPTION_KEY: <%= env_flag(v).to_json %>
 <% end -%>
 
+<% if_p("opa.result_allowed_key") do |v| -%>
+    CONCOURSE_OPA_RESULT_ALLOWED_KEY: <%= env_flag(v).to_json %>
+<% end -%>
+
+<% if_p("opa.result_messages_key") do |v| -%>
+    CONCOURSE_OPA_RESULT_MESSAGES_KEY: <%= env_flag(v).to_json %>
+<% end -%>
+
+<% if_p("opa.result_should_block_key") do |v| -%>
+    CONCOURSE_OPA_RESULT_SHOULD_BLOCK_KEY: <%= env_flag(v).to_json %>
+<% end -%>
+
 <% if_p("opa.timeout") do |v| -%>
     CONCOURSE_OPA_TIMEOUT: <%= env_flag(v).to_json %>
 <% end -%>
