sync template and generated files
- containerd.allow_host_access was copy-pasted wrong
- the comments regarding default runtime should be in the template, not
  the generated file

Signed-off-by: Bohan Chen <bochen@pivotal.io>

--- a/jobs/worker/templates/env.sh.erb.tmpl
+++ b/jobs/worker/templates/env.sh.erb.tmpl
@@ -32,18 +32,11 @@ export CONCOURSE_GARDEN_CONFIG=/var/vcap/jobs/worker/config/garden.ini
 
 {{template "env_helpers.erb.tmpl" .}}
 
-#TODO: When the Concourse binary starts defaulting to containerd in the future the if condition should also check for
-#the case where runtime is nil (i.e. defaults to containerd without being specified)
-<%
-  if_p("runtime") do |v|
-    if v == "containerd"
--%>
+# While these only apply if the containerd runtime is used, adding logic here
+# to figure out what the default runtime is is kinda annoying, so let's just
+# set these by default. Guardian runtime will just ignore them
 export CONCOURSE_CONTAINERD_INIT_BIN=<%= p("containerd.init_bin", "/var/vcap/packages/concourse/bin/init") %>
 export CONCOURSE_CONTAINERD_CNI_PLUGINS_DIR=<%= p("containerd.cni_plugins_dir", "/var/vcap/packages/concourse/bin") %>
-<%
-    end
-  end
--%>
 
 {{ range $prop := .EnvProperties -}}
 {{- if $prop.Env -}}
