use nested block instead of flat properties
just so it's organized a tiny bit better

Signed-off-by: Bohan Chen <bochen@pivotal.io>

--- a/jobs/web/templates/bpm.yml.erb
+++ b/jobs/web/templates/bpm.yml.erb
@@ -939,15 +939,15 @@ processes:
     CONCOURSE_OLD_ENCRYPTION_KEY: <%= env_flag(v).to_json %>
 <% end -%>
 
-<% if_p("opa.result_allowed_key") do |v| -%>
+<% if_p("opa.result.allowed_key") do |v| -%>
     CONCOURSE_OPA_RESULT_ALLOWED_KEY: <%= env_flag(v).to_json %>
 <% end -%>
 
-<% if_p("opa.result_messages_key") do |v| -%>
+<% if_p("opa.result.messages_key") do |v| -%>
     CONCOURSE_OPA_RESULT_MESSAGES_KEY: <%= env_flag(v).to_json %>
 <% end -%>
 
-<% if_p("opa.result_should_block_key") do |v| -%>
+<% if_p("opa.result.should_block_key") do |v| -%>
     CONCOURSE_OPA_RESULT_SHOULD_BLOCK_KEY: <%= env_flag(v).to_json %>
 <% end -%>
 
