--- a/jobs/bbr-atcdb/templates/backup.sh.erb
+++ b/jobs/bbr-atcdb/templates/backup.sh.erb
@@ -25,7 +25,7 @@ sleep 30
 ticks=0
 
 until "/var/vcap/jobs/database-backup-restorer/bin/backup" --config "${CONFIG_PATH}" --artifact-file "${BBR_ARTIFACT_FILE_PATH}"; do
-  ((ticks++))
+  ticks=$((ticks+1))
 
   if [[ $ticks -ge 3 ]]; then
     echo "Backup failed three times. Giving up."
