add trace flags to worker job
flags added in concourse/concourse#7487

Signed-off-by: Taylor Silva <tsilva@pivotal.io>
Co-authored-by: Esteban Foronda <eforonda@vmware.com>

--- a/jobs/worker/templates/env.sh.erb
+++ b/jobs/worker/templates/env.sh.erb
@@ -242,6 +242,50 @@ export CONCOURSE_TAG=<%= esc(env_flag(v)) %>
 export CONCOURSE_TEAM=<%= esc(env_flag(v)) %>
 <% end -%>
 
+<% if_p("tracing.attributes") do |v| -%>
+export CONCOURSE_TRACING_ATTRIBUTE=<%= esc(env_flag(v)) %>
+<% end -%>
+
+<% if_p("tracing.honeycomb_api_key") do |v| -%>
+export CONCOURSE_TRACING_HONEYCOMB_API_KEY=<%= esc(env_flag(v)) %>
+<% end -%>
+
+<% if_p("tracing.honeycomb_dataset") do |v| -%>
+export CONCOURSE_TRACING_HONEYCOMB_DATASET=<%= esc(env_flag(v)) %>
+<% end -%>
+
+<% if_p("tracing.jaeger_endpoint") do |v| -%>
+export CONCOURSE_TRACING_JAEGER_ENDPOINT=<%= esc(env_flag(v)) %>
+<% end -%>
+
+<% if_p("tracing.jaeger_service") do |v| -%>
+export CONCOURSE_TRACING_JAEGER_SERVICE=<%= esc(env_flag(v)) %>
+<% end -%>
+
+<% if_p("tracing.jaeger_tags") do |v| -%>
+export CONCOURSE_TRACING_JAEGER_TAGS=<%= esc(env_flag(v)) %>
+<% end -%>
+
+<% if_p("tracing.otlp_address") do |v| -%>
+export CONCOURSE_TRACING_OTLP_ADDRESS=<%= esc(env_flag(v)) %>
+<% end -%>
+
+<% if_p("tracing.otlp_headers") do |v| -%>
+export CONCOURSE_TRACING_OTLP_HEADER=<%= esc(env_flag(v)) %>
+<% end -%>
+
+<% if_p("tracing.otlp_use_tls") do |v| -%>
+export CONCOURSE_TRACING_OTLP_USE_TLS=<%= esc(env_flag(v)) %>
+<% end -%>
+
+<% if_p("tracing.service_name") do |v| -%>
+export CONCOURSE_TRACING_SERVICE_NAME=<%= esc(env_flag(v)) %>
+<% end -%>
+
+<% if_p("tracing.stackdriver_projectid") do |v| -%>
+export CONCOURSE_TRACING_STACKDRIVER_PROJECTID=<%= esc(env_flag(v)) %>
+<% end -%>
+
 <% if_p("volume_sweeper_max_in_flight") do |v| -%>
 export CONCOURSE_VOLUME_SWEEPER_MAX_IN_FLIGHT=<%= esc(env_flag(v)) %>
 <% end -%>
