--- a/jobs/web/templates/bpm.yml.erb
+++ b/jobs/web/templates/bpm.yml.erb
@@ -279,18 +279,6 @@ processes:
     CONCOURSE_COMPONENT_RUNNER_INTERVAL: <%= env_flag(v).to_json %>
 <% end -%>
 
-<% if_p("default_get_timeout") do |v| -%>
-    CONCOURSE_DEFAULT_GET_TIMEOUT: <%= env_flag(v).to_json %>
-<% end -%>
-
-<% if_p("default_put_timeout") do |v| -%>
-    CONCOURSE_DEFAULT_PUT_TIMEOUT: <%= env_flag(v).to_json %>
-<% end -%>
-
-<% if_p("default_task_timeout") do |v| -%>
-    CONCOURSE_DEFAULT_TASK_TIMEOUT: <%= env_flag(v).to_json %>
-<% end -%>
-
 <% if_p("concurrent_request_limits") do |v| -%>
     CONCOURSE_CONCURRENT_REQUEST_LIMIT: <%= env_flag(v).to_json %>
 <% end -%>
@@ -419,12 +407,24 @@ processes:
     CONCOURSE_RESOURCE_WITH_WEBHOOK_CHECKING_INTERVAL: <%= env_flag(v).to_json %>
 <% end -%>
 
+<% if_p("default_get_timeout") do |v| -%>
+    CONCOURSE_DEFAULT_GET_TIMEOUT: <%= env_flag(v).to_json %>
+<% end -%>
+
+<% if_p("default_put_timeout") do |v| -%>
+    CONCOURSE_DEFAULT_PUT_TIMEOUT: <%= env_flag(v).to_json %>
+<% end -%>
+
 <% if_p("default_task_cpu_limit") do |v| -%>
     CONCOURSE_DEFAULT_TASK_CPU_LIMIT: <%= env_flag(v).to_json %>
 <% end -%>
 
 <% if_p("default_task_memory_limit") do |v| -%>
     CONCOURSE_DEFAULT_TASK_MEMORY_LIMIT: <%= env_flag(v).to_json %>
+<% end -%>
+
+<% if_p("default_task_timeout") do |v| -%>
+    CONCOURSE_DEFAULT_TASK_TIMEOUT: <%= env_flag(v).to_json %>
 <% end -%>
 
 <% if_p("displayer_user_id_per_connector") do |v| -%>
@@ -989,6 +989,10 @@ processes:
 
 <% if_p("password_connector") do |v| -%>
     CONCOURSE_PASSWORD_CONNECTOR: <%= env_flag(v).to_json %>
+<% end -%>
+
+<% if_p("pause_pipelines_after") do |v| -%>
+    CONCOURSE_PAUSE_PIPELINES_AFTER: <%= env_flag(v).to_json %>
 <% end -%>
 
 <% if_p("policy_check.filter_actions") do |v| -%>
