add CONCOURSE_GARDEN_BIN configuration
Co-authored-by: Rui Yang <ruiya@vmware.com>

--- a/jobs/worker/templates/env.sh.erb
+++ b/jobs/worker/templates/env.sh.erb
@@ -138,6 +138,10 @@ export CONCOURSE_EXTERNAL_GARDEN_URL=<%= esc(env_flag(v)) %>
 export CONCOURSE_GARDEN_ALLOW_HOST_ACCESS=<%= esc(env_flag(v)) %>
 <% end -%>
 
+<% if_p("garden.bin") do |v| -%>
+export CONCOURSE_GARDEN_BIN=<%= esc(env_flag(v)) %>
+<% end -%>
+
 <% if_p("garden.deny_networks") do |v| -%>
 export CONCOURSE_GARDEN_DENY_NETWORK=<%= esc(env_flag(v)) %>
 <% end -%>
