add worker containerd config
for oci_hooks_dir and seccomp_profile

Signed-off-by: Rui Yang <ruiya@vmware.com>

--- a/jobs/worker/templates/env.sh.erb
+++ b/jobs/worker/templates/env.sh.erb
@@ -138,6 +138,14 @@ export CONCOURSE_CONTAINERD_EXTERNAL_IP=<%= esc(env_flag(v)) %>
 export CONCOURSE_CONTAINERD_INIT_BIN=<%= esc(env_flag(v)) %>
 <% end -%>
 
+<% if_p("containerd.oci_hooks_dir") do |v| -%>
+export CONCOURSE_CONTAINERD_OCI_HOOKS_DIR=<%= esc(env_flag(v)) %>
+<% end -%>
+
+<% if_p("containerd.seccomp_profile") do |v| -%>
+export CONCOURSE_CONTAINERD_SECCOMP_PROFILE=<%= esc(env_flag(v)) %>
+<% end -%>
+
 <% if_p("containerd.max_containers") do |v| -%>
 export CONCOURSE_CONTAINERD_MAX_CONTAINERS=<%= esc(env_flag(v)) %>
 <% end -%>
