--- a/jobs/worker/templates/env.sh.erb
+++ b/jobs/worker/templates/env.sh.erb
@@ -140,10 +140,18 @@ export CONCOURSE_CONTAINERD_INIT_BIN=<%= esc(env_flag(v)) %>
 
 <% if_p("containerd.oci_hooks_dir") do |v| -%>
 export CONCOURSE_CONTAINERD_OCI_HOOKS_DIR=<%= esc(env_flag(v)) %>
+<% if_p("containerd.ipv6.disable_masquerade") do |v| -%>
+export CONCOURSE_CONTAINERD_V6_DISABLE_MASQUERADE=<%= esc(env_flag(v)) %>
 <% end -%>
 
 <% if_p("containerd.seccomp_profile") do |v| -%>
 export CONCOURSE_CONTAINERD_SECCOMP_PROFILE=<%= esc(env_flag(v)) %>
+<% if_p("containerd.ipv6.enabled") do |v| -%>
+export CONCOURSE_CONTAINERD_V6_ENABLE=<%= esc(env_flag(v)) %>
+<% end -%>
+
+<% if_p("containerd.ipv6.pool") do |v| -%>
+export CONCOURSE_CONTAINERD_V6_POOL=<%= esc(env_flag(v)) %>
 <% end -%>
 
 <% if_p("containerd.max_containers") do |v| -%>
