misc - the template renderer moved these around
or maybe someone manually added them instead of using the generate
script?

Signed-off-by: Taylor Silva <dev@taydev.net>

--- a/jobs/worker/templates/env.sh.erb
+++ b/jobs/worker/templates/env.sh.erb
@@ -138,14 +138,10 @@ export CONCOURSE_CONTAINERD_EXTERNAL_IP=<%= esc(env_flag(v)) %>
 export CONCOURSE_CONTAINERD_INIT_BIN=<%= esc(env_flag(v)) %>
 <% end -%>
 
-<% if_p("containerd.oci_hooks_dir") do |v| -%>
-export CONCOURSE_CONTAINERD_OCI_HOOKS_DIR=<%= esc(env_flag(v)) %>
 <% if_p("containerd.ipv6.disable_masquerade") do |v| -%>
 export CONCOURSE_CONTAINERD_V6_DISABLE_MASQUERADE=<%= esc(env_flag(v)) %>
 <% end -%>
 
-<% if_p("containerd.seccomp_profile") do |v| -%>
-export CONCOURSE_CONTAINERD_SECCOMP_PROFILE=<%= esc(env_flag(v)) %>
 <% if_p("containerd.ipv6.enabled") do |v| -%>
 export CONCOURSE_CONTAINERD_V6_ENABLE=<%= esc(env_flag(v)) %>
 <% end -%>
@@ -166,12 +162,20 @@ export CONCOURSE_CONTAINERD_MTU=<%= esc(env_flag(v)) %>
 export CONCOURSE_CONTAINERD_NETWORK_POOL=<%= esc(env_flag(v)) %>
 <% end -%>
 
+<% if_p("containerd.oci_hooks_dir") do |v| -%>
+export CONCOURSE_CONTAINERD_OCI_HOOKS_DIR=<%= esc(env_flag(v)) %>
+<% end -%>
+
 <% if_p("containerd.request_timeout") do |v| -%>
 export CONCOURSE_CONTAINERD_REQUEST_TIMEOUT=<%= esc(env_flag(v)) %>
 <% end -%>
 
 <% if_p("containerd.restricted_networks") do |v| -%>
 export CONCOURSE_CONTAINERD_RESTRICTED_NETWORK=<%= esc(env_flag(v)) %>
+<% end -%>
+
+<% if_p("containerd.seccomp_profile") do |v| -%>
+export CONCOURSE_CONTAINERD_SECCOMP_PROFILE=<%= esc(env_flag(v)) %>
 <% end -%>
 
 <% if_p("debug.bind_ip") do |v| -%>
